--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,138 @@
+/* Import */
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");
+
+/* Custom Properties */
+:root {
+  --color-primary-blue: hsl(238, 40%, 52%);
+  --color-primary-red: hsl(358, 79%, 66%);
+  --color-soft-blue: hsl(239, 57%, 85%);
+  --color-soft-red: hsl(357, 100%, 86%);
+  --color-neutral-blue: hsl(212, 24%, 26%);
+  --color-neutral-gray: hsl(211, 10%, 45%);
+  --color-soft-gray: hsl(223, 19%, 93%);
+  --color-soft-white: hsl(228, 33%, 97%);
+  --color-white: hsl(0, 0%, 100%);
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+/* Typography */
+html {
+  font-size: 62.5%;
+}
+
 body {
+  font-size: 1.5rem;
+  background-color: var(--color-soft-white);
+  color: var(--color-neutral-gray);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  letter-spacing: 0.5px;
+  font-family: "Rubik", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* Comment */
+.comment {
+  align-items: center;
+  background-color: var(--color-white);
+  border-radius: 10px;
+  display: grid;
+  grid-column-gap: 1rem;
+  grid-row-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 0.5fr 1fr 0.5fr;
+  margin: 2rem;
+  padding: 1rem;
+}
+
+.grid-info-1 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.grid-info-2 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.grid-info-3 {
+  grid-area: 1 / 3 / 2 / 4;
+}
+.grid-content {
+  grid-area: 2 / 1 / 3 / 4;
+}
+.grid-action-1 {
+  grid-area: 3 / 1 / 4 / 2;
+}
+.grid-action-2 {
+  grid-area: 3 / 2 / 4 / 3;
+}
+.grid-action-3 {
+  grid-area: 3 / 3 / 4 / 4;
+}
+
+.comment__avatar {
+  text-align: left;
+}
+.comment__avatar img {
+  width: 32px;
+}
+
+.comment__username {
+  font-weight: 700;
+}
+
+/* Button */
+button {
+  all: unset;
+  cursor: pointer;
+}
+.btn {
+  background-color: var(--color-soft-gray);
+  border-radius: 10px;
+  display: grid;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  justify-items: center;
+  width: 10rem;
+}
+.btn-plus {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.btn-score {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.btn-minus {
+  grid-area: 1 / 3 / 2 / 4;
+}
+.btn-text {
+  color: var(--color-primary-blue);
+  font-weight: 700;
+  padding: 1rem;
+}
+
+.btn button {
+  margin: 1rem;
+}
+
+/* Actions */
+
+.action {
+  font-weight: 700;
+}
+
+.delete {
+  color: var(--color-primary-red);
+}
+
+.reply {
+  color: var(--color-primary-blue);
 }
