--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body {
   color: var(--color-neutral-gray);
   margin: 0;
   letter-spacing: 0.5px;
+  line-height: 2.2rem;
   font-family: "Rubik", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -41,39 +42,43 @@ code {
     monospace;
 }
 
+/* Box */
+.box {
+  background-color: var(--color-white);
+  border-radius: 10px;
+  margin: 2rem;
+  padding: 1rem;
+}
+
 /* Comment */
 .comment {
   align-items: center;
-  background-color: var(--color-white);
-  border-radius: 10px;
   display: grid;
   grid-column-gap: 1rem;
   grid-row-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 0.5fr 1fr 0.5fr;
-  margin: 2rem;
-  padding: 1rem;
 }
 
-.grid-info-1 {
+.comment-info-1 {
   grid-area: 1 / 1 / 2 / 2;
 }
-.grid-info-2 {
+.comment-info-2 {
   grid-area: 1 / 2 / 2 / 3;
 }
-.grid-info-3 {
+.comment-info-3 {
   grid-area: 1 / 3 / 2 / 4;
 }
-.grid-content {
+.comment-content {
   grid-area: 2 / 1 / 3 / 4;
 }
-.grid-action-1 {
+.comment-action-1 {
   grid-area: 3 / 1 / 4 / 2;
 }
-.grid-action-2 {
+.comment-action-2 {
   grid-area: 3 / 2 / 4 / 3;
 }
-.grid-action-3 {
+.comment-action-3 {
   grid-area: 3 / 3 / 4 / 4;
 }
 
@@ -118,21 +123,17 @@ button {
   font-weight: 700;
   padding: 1rem;
 }
-
 .btn button {
   margin: 1rem;
 }
 
 /* Actions */
-
 .action {
   font-weight: 700;
 }
-
 .delete {
   color: var(--color-primary-red);
 }
-
 .reply {
   color: var(--color-primary-blue);
 }
