--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
   background-color: var(--color-soft-white);
   color: var(--color-neutral-gray);
   margin: 0;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.4px;
   line-height: 2.2rem;
   font-family: "Rubik", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -47,7 +47,7 @@ code {
   background-color: var(--color-white);
   border-radius: 10px;
   margin: 2rem;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 /* Comment */
@@ -93,6 +93,19 @@ code {
   font-weight: 700;
 }
 
+/* Input */
+.input {
+  border-radius: 10px;
+  border: 1px solid var(--color-soft-gray);
+  color: var(--color-neutral-gray);
+  font-family: inherit;
+  font-size: 1.7rem;
+  resize: none;
+  height: 8rem;
+  width: 100%;
+  padding: 1rem;
+}
+
 /* Button */
 button {
   all: unset;
@@ -107,7 +120,7 @@ button {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
   justify-items: center;
-  width: 10rem;
+  width: fit-content;
 }
 .btn-plus {
   grid-area: 1 / 1 / 2 / 2;
