--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ body {
   letter-spacing: 0.4px;
   line-height: 2.2rem;
   font-family: "Rubik", sans-serif;
+  font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -54,7 +55,7 @@ code {
 .comment {
   align-items: center;
   display: grid;
-  grid-column-gap: 1rem;
+  grid-column-gap: 0.5rem;
   grid-row-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 0.5fr 1fr 0.5fr;
@@ -76,9 +77,13 @@ code {
   grid-area: 3 / 1 / 4 / 2;
 }
 .comment-action-2 {
+  justify-self: end;
+
   grid-area: 3 / 2 / 4 / 3;
 }
 .comment-action-3 {
+  justify-self: end;
+
   grid-area: 3 / 3 / 4 / 4;
 }
 
@@ -91,6 +96,28 @@ code {
 
 .comment__username {
   font-weight: 700;
+}
+
+/* Reply */
+.reply {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 0.5fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  padding: 1rem;
+  align-items: center;
+}
+
+.reply-content {
+  grid-area: 1 / 1 / 2 / 3;
+}
+.reply-info {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.reply-action {
+  justify-self: end;
+  grid-area: 2 / 2 / 3 / 3;
 }
 
 /* Input */
@@ -110,6 +137,7 @@ code {
 button {
   all: unset;
   cursor: pointer;
+  margin: 1rem;
 }
 .btn {
   background-color: var(--color-soft-gray);
@@ -136,17 +164,28 @@ button {
   font-weight: 700;
   padding: 1rem;
 }
-.btn button {
-  margin: 1rem;
+.btn-send {
+  border-radius: 10px;
+  background-color: var(--color-primary-blue);
+  color: var(--color-white);
+  font-weight: 500;
+  text-transform: uppercase;
+  text-align: center;
+  height: 50px;
+  width: 10rem;
+}
+
+.btn-send:hover {
+  background-color: var(--color-soft-blue);
 }
 
 /* Actions */
 .action {
   font-weight: 700;
 }
-.delete {
+.action__delete {
   color: var(--color-primary-red);
 }
-.reply {
+.action__reply {
   color: var(--color-primary-blue);
 }
