--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ code {
 .comment {
   align-items: center;
   display: grid;
-  grid-column-gap: 0.5rem;
+  grid-column-gap: 0;
   grid-row-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 0.5fr 1fr 0.5fr;
