--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   background-color: var(--color-soft-white);
   color: var(--color-neutral-gray);
   margin: 0;
@@ -36,6 +36,12 @@ body {
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media screen and (min-width: 1000px) {
+  body {
+    font-size: 1.5rem;
+  }
 }
 
 code {
@@ -55,8 +61,8 @@ code {
 .comment {
   align-items: center;
   display: grid;
-  grid-column-gap: 0;
-  grid-row-gap: 1rem;
+  grid-column-gap: 0px;
+  grid-row-gap: 0rem;
   grid-template-columns: 0.5fr 0.5fr 0.8fr 1fr;
   grid-template-rows: 0.5fr 1fr 0.5fr;
 }
@@ -112,6 +118,59 @@ code {
   font-weight: 400;
   padding: 0 1rem;
 }
+@media screen and (min-width: 1000px) {
+  .comment {
+    align-items: baseline;
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: 0.5fr repeat(6, 1fr);
+    grid-template-rows: 0.3fr 0.7fr;
+    grid-column-gap: 0rem;
+    grid-row-gap: 0px;
+    padding: 2rem;
+    margin: 2rem 25rem;
+  }
+  .comment-info-1 {
+    grid-area: 1 / 2 / 2 / 3;
+    justify-self: center;
+  }
+  .comment-info-2 {
+    align-self: center;
+    grid-area: 1 / 3 / 2 / 4;
+  }
+  .comment-info-3 {
+    align-self: center;
+
+    grid-area: 1 / 4 / 2 / 5;
+  }
+  .comment-info-4 {
+    align-self: center;
+
+    grid-area: 1 / 5 / 2 / 6;
+  }
+  .comment-content {
+    align-self: center;
+
+    grid-area: 2 / 2 / 3 / 8;
+  }
+  .comment-action-1 {
+    grid-area: 1 / 1 / 3 / 2;
+  }
+  .comment-action-2 {
+    align-self: center;
+
+    grid-area: 1 / 6 / 2 / 7;
+  }
+  .comment-action-3 {
+    align-self: center;
+
+    grid-area: 1 / 7 / 2 / 8;
+  }
+
+  .comment--reply {
+    margin-left: 30rem;
+  }
+}
 
 /* Reply */
 .reply {
@@ -134,7 +193,11 @@ code {
   justify-self: end;
   grid-area: 2 / 2 / 3 / 3;
 }
-
+@media screen and (min-width: 1000px) {
+  .reply {
+    margin: 2rem 25rem;
+  }
+}
 /* Input */
 .input {
   border-radius: 10px;
@@ -163,7 +226,7 @@ button {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
   justify-items: center;
-  width: fit-content;
+  width: 10rem;
 }
 .btn-plus {
   grid-area: 1 / 1 / 2 / 2;
@@ -194,6 +257,23 @@ button {
   background-color: var(--color-soft-blue);
 }
 
+@media screen and (min-width: 1000px) {
+  .btn {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    width: 4rem;
+  }
+  .btn-plus {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .btn-score {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .btn-minus {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+}
+
 /* Actions */
 .action {
   font-weight: 700;
@@ -218,7 +298,6 @@ button {
 }
 
 /* Modal */
-
 .modal {
   width: 100vw;
   height: 100vh;
@@ -233,7 +312,7 @@ button {
 
 .modal-container {
   width: 90vw;
-  height: 70vw;
+  height: 35vh;
   border-radius: 12px;
   background-color: white;
   display: flex;
@@ -272,4 +351,11 @@ button {
 }
 .modal-container .footer .danger {
   background-color: var(--color-primary-red);
+}
+
+@media screen and (min-width: 1000px) {
+  .modal-container {
+    width: 30vw;
+    height: 30vh;
+  }
 }
