--- a/src/index.css
+++ b/src/index.css
@@ -68,10 +68,11 @@ code {
 }
 
 .comment-info-1 {
+  justify-self: center;
   grid-area: 1 / 1 / 2 / 2;
 }
 .comment-info-2 {
-  justify-items: center;
+  justify-self: center;
   grid-area: 1 / 2 / 2 / 3;
 }
 .comment-info-3 {
@@ -80,6 +81,7 @@ code {
 }
 .comment-info-4 {
   grid-area: 1 / 4 / 2 / 5;
+  justify-self: end;
 }
 .comment-content {
   grid-area: 2 / 1 / 3 / 5;
@@ -211,6 +213,10 @@ code {
   padding: 1rem;
 }
 
+.update {
+  height: 14rem;
+}
+
 /* Button */
 button {
   all: unset;
@@ -312,12 +318,12 @@ button {
 
 .modal-container {
   width: 90vw;
-  height: 35vh;
+  height: fit-content;
   border-radius: 12px;
   background-color: white;
   display: flex;
   flex-direction: column;
-  padding: 0 2rem;
+  padding: 5rem 2rem;
   justify-content: center;
 }
 
