--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
   margin: 0;
 }
 
-@media screen and (min-width: 1272px) {
+@media screen and (min-width: 1440px) {
   body {
     font-size: 1.5rem;
   }
@@ -55,6 +55,14 @@ code {
   border-radius: 10px;
   margin: 2rem;
   padding: 1.3rem;
+}
+
+@media screen and (min-width: 1440px) {
+  .box {
+    margin: 2rem auto;
+    width: 50vw;
+    padding: 1rem 2rem;
+  }
 }
 
 /* Comment */
@@ -123,7 +131,7 @@ code {
   font-weight: 400;
   padding: 0 1rem;
 }
-@media screen and (min-width: 1272px) {
+@media screen and (min-width: 1440px) {
   .comment {
     align-items: baseline;
     display: grid;
@@ -132,8 +140,6 @@ code {
     grid-template-columns: 0.5fr repeat(6, 1fr);
     grid-template-rows: 0.3fr 0.7fr;
     justify-content: space-between;
-    margin: 2rem 25rem;
-    padding: 1rem 2rem;
   }
   .comment-info-1 {
     grid-area: 1 / 2 / 2 / 3;
@@ -168,7 +174,8 @@ code {
   }
 
   .comment--reply {
-    margin-left: 30rem;
+    margin: 2rem auto;
+    width: 45vw;
   }
 }
 
@@ -193,9 +200,10 @@ code {
   grid-area: 2 / 2 / 3 / 3;
   justify-self: end;
 }
-@media screen and (min-width: 1272px) {
+@media screen and (min-width: 1440px) {
   .reply {
-    margin: 2rem 25rem;
+    margin: 2rem auto;
+    width: 50vw;
   }
 }
 /* Input */
@@ -265,7 +273,7 @@ button {
   background-color: var(--color-soft-blue);
 }
 
-@media screen and (min-width: 1272px) {
+@media screen and (min-width: 1440px) {
   .btn {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
@@ -349,7 +357,8 @@ button {
   cursor: pointer;
   font-weight: 500;
   height: 5rem;
-  margin: 0rem 1rem;
+  margin: 2rem 1rem;
+  margin-bottom: 0;
   text-align: center;
   text-transform: uppercase;
   width: 50%;
@@ -361,7 +370,7 @@ button {
   background-color: var(--color-primary-red);
 }
 
-@media screen and (min-width: 1272px) {
+@media screen and (min-width: 1440px) {
   .modal-container {
     width: 50vw;
     height: fit-content;
